--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_maps_flutter: ^2.12.3
   url_launcher: ^6.3.2
   geolocator: ^14.0.2
+  k_means_cluster: ^0.3.1
 
 dev_dependencies:
   flutter_test:
