--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   freezed_annotation: ^3.1.0
   http: ^1.5.0
+  kmeans: ^1.0.0
 
   google_maps_flutter: ^2.12.3
   url_launcher: ^6.3.2
